# tauto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HANDOFF.md  README.md  pyproject.toml
.claude/skills/tauto-rules/: SKILL.md
.claude/skills/tauto-tests/: SKILL.md
.github/workflows/: ci.yml
deploy/helm/tauto/: Chart.yaml  values.yaml
docs/: index.html
docs/superpowers/plans/: 2026-06-30-tauto-phase-0-foundation.md  2026-06-30-tauto-phase-1-project-document-store.md  2026-06-30-tauto-phase-2-contract-parser-ir.md
docs/superpowers/specs/: 2026-06-30-tauto-phase-0-2-design.md
examples/benchmark/: README.md  _glossary.md  customer_account.odcs.yaml  inventory_reservation.odcs.yaml  order.odcs.yaml  payment.odcs.yaml  run_benchmark.py  shipment.odcs.yaml
examples/benchmark/rules/: customer_account.md  inventory_reservation.md  order.md  payment.md  shipment.md
examples/odcs/: mortgage.odcs.yaml
examples/proposed/: compatible-refinance.md  cross-entity-mixup.md  missing-state-guard.md
examples/rules/: _glossary.md  _observed_states.json  disburse-funds.md
scripts/: dev.sh
src/: conformance.rs  deadrule.rs  lib.rs  main.rs  scanner.rs  test_gen.rs
src/contract_ir/: conflicts.rs  diff.rs  mod.rs  models.rs  serialization.rs
src/contract_parser/: dsl.rs  markdown.rs  mod.rs
src/glossary/: db_source.rs  lifecycle.rs  mod.rs  models.rs  odcs_source.rs  parser.rs  reconcile.rs  validate.rs
src/lean_gen/: io.rs  lake.rs  mod.rs  model.rs  safety.rs  workspace.rs
src/preprocessing/: context_builder.rs  mod.rs
src/project_store/: file_store.rs  mod.rs  models.rs
src/server/: lake_worker.rs  mcp.rs  mod.rs  routes.rs
src/slm/: http_provider.rs  mod.rs  provider.rs  stub.rs  traceability.rs  translate.rs
src/tauto_contract_ir/: __init__.py  models.py  serialization.py
src/tauto_contract_parser/: __init__.py  dsl.py  markdown.py
src/tauto_lean_gen/: __init__.py  workspace.py
src/tauto_preprocessing/: __init__.py  context_builder.py
src/tauto_project_store/: __init__.py  file_store.py  models.py
src/tauto_slm/: __init__.py  provider.py  traceability.py
tests/: cli_integration.rs  test_imports.py
tests/contract_ir/: test_models.py  test_semantic_hash_stability.py  test_serialization.py
tests/contract_parser/: test_dsl.py  test_markdown.py
tests/e2e/: run.sh
tests/fixtures/: conflicts.md  orders.md
tests/fixtures/base/: orders.md
tests/lean_gen/: test_module_naming.py  test_workspace.py
tests/preprocessing/: test_context_builder.py
tests/project_store/: test_file_store.py  test_models.py
tests/slm/: test_provider.py  test_traceability.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/public/: fonts.css
ui/src/: App.tsx  index.css
(+27 files in other folders)
