[package]
name = "tauto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tauto"
path = "src/main.rs"

[lib]
name = "tauto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
