[package]
name = "tauto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tauto"
path = "src/main.rs"

[lib]
name = "tauto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tempfile = "3"
postgres = { version = "0.19", optional = true }

[features]
# The live-database state source for `/api/v1/reconcile`. Off by default so the
# core build stays lean and dependency-free; enable with `--features database`
# and set DATABASE_URL to read observed states from a live Postgres instance.
database = ["dep:postgres"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
