[project]
name = "tauto"
version = "0.1.0"
description = "Lean-backed business contract verification platform"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/tauto_contract_ir",
  "src/tauto_contract_parser",
  "src/tauto_project_store",
  "src/tauto_slm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
